--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,6 +1,7 @@
 @import "_variables.scss";
 @import "~materialize-css/sass/materialize.scss";
 @import "~material-design-icons-iconfont/dist/material-design-icons.scss";
+@import "~perfect-scrollbar/dist/css/perfect-scrollbar.min.css";
 @import "./common.scss";
 @import "./sidebar.scss";
 @import "./manga-list.scss";
