--- a/src/scss/topbar.scss
+++ b/src/scss/topbar.scss
@@ -1,6 +1,6 @@
 .topbar {
   text-align: center;
-  padding: 7px 10px;
+  // padding: 7px 10px;
   color: #fff;
   font-size: 24px;
   display: flex;
@@ -14,11 +14,11 @@
 	.control{
 		line-height:0px;
 		cursor: pointer;
-		font-size: 42px;
+		// font-size: 42px;
 	}	
 	.favorite{
 		line-height:0px;
 		cursor: pointer;
-		font-size: 30px;
+		// font-size: 30px;
 	}
 }
