--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -23,9 +23,8 @@
 
 				<div class="info">
 					<span class="title" data-bind="text:titleShort, tooltip:'bottom'"></span>
-					<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, clickBubble:false">
-						<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite, 
-						click:$parent.toggleFavorites">star</i>
+					<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, click:$parent.toggleFavorites, clickBubble:false">
+						<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite">star</i>
 					</button>
 				</div>
 			</div>			
