Additional fix for TG-63

--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -13,7 +13,7 @@
 
 	</section>
 	<div id="mangalist">
-		<!-- ko foreach:data:filteredManga  -->
+		<!-- ko foreach:filteredManga  -->
 		<div class="manga" data-bind="click:$parent.viewManga">
 
 			<div class="manga-content">
