Fix for TG-67 #closed

--- a/src/js/components/topbar/topbar.template.html
+++ b/src/js/components/topbar/topbar.template.html
@@ -1,16 +1,6 @@
-<template>
-<div class="topbar">
-	<i class="material-icons control" data-bind="toggleNav:'.wrapper'">menu</i>
-	<i class="material-icons favorite" >star_border</i>
-	<span class="title-text" >
-		<span data-bind="text:topBarText"></span>
-	</span>
-	<!-- /ko -->
-</div>
-</template>
 <nav>
 	<div class="nav-wrapper">
-		<a href="javascript:void(0);" class="">
+		<a href="javascript:void(0);" class="topbar-text">
 			<span>
 				<span data-bind="text:topBarText"></span>
 			</span>
