--- a/src/scss/topbar.scss
+++ b/src/scss/topbar.scss
@@ -7,6 +7,11 @@
   align-items:center;
 
 }
+.topbar-text {
+	max-width:33%;
+	@extend .truncate;
+	display:inline-block;
+}
 .topbar {
 	.title-text{
 		flex-grow:1;
