Fix for TG-68 #closed
Reason: tooltip was overlapping the screen.

--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -23,7 +23,7 @@
 				</div>
 
 				<div class="info">
-					<span class="title" data-bind="text:titleShort, tooltip:'bottom'"></span>
+					<span class="title" data-bind="text:titleShort, tooltip:'top'"></span>
 					<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, click:$parent.toggleFavorites, clickBubble:false">
 						<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite">star</i>
 					</button>
