--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -29,9 +29,7 @@
 		</div>
 	</div>
 	
-	<div class="progress col s12 m12 l12" data-bind="visibility:searching">
-		<div class="indeterminate"></div>
-	</div>
+	
 </section>
 <div id="mangalist" data-bind="">
 	<!-- ko foreach:{data:mangas, afterRender: afterRender}  -->
@@ -41,7 +39,7 @@
 				<img class="manga-image" data-bind="src:thumbnail, click:$parent.viewManga" >
 			</div>
 			<div class="info">
-				<span class="title" data-bind="text:titleShort, tooltip:'bottom'"></span>
+				<span class="title" data-bind="text:titleShort, tooltip:'top'"></span>
 				<button class="cbutton cbutton--effect-boris" data-bind="singlePulseEffect:true, clickBubble:false">
 				<i class="material-icons cbutton__icon action" data-bind="isFavorite:isFavorite,
 				click:$parent.toggleFavorites">star</i>
