Implement TG-74  #done

--- a/src/js/components/topbar/topbar.template.html
+++ b/src/js/components/topbar/topbar.template.html
@@ -46,3 +46,6 @@
 		</form> -->
 	</div>
 </nav>
+<div class="progress col s12 m12 l12 " data-bind="visible:searching">
+	<div class="indeterminate indigo accent-4"></div>
+</div>
