Improve look and feel of the app.

--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -2,13 +2,13 @@
     <div class="sidebar-favorites-manga collection with-header ">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light" data-bind="click:showFavorites, active: isFavoritesActive">
             <i class="material-icons left">star</i>
-            <strong class="grey-text text-darken-3"> Favorites</strong>
+            <strong class=""> Favorites</strong>
         </a>
     </div>
     <div class="sidebar-favorites collection with-header ">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light">
             <i class="material-icons left">bookmark</i>
-            <strong class="grey-text text-darken-3"> Bookmarked Folders</strong>
+            <strong class=""> Bookmarked Folders</strong>
         </a>
     </div>
     <ul class="sidebar-favorites-items collection" data-bind="foreach:bookmarks">
@@ -21,7 +21,7 @@
     <div class="sidebar-directory-header collection with-header">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light" data-bind="click:openDirectory">
             <i class="material-icons left">create_new_folder</i>
-            <strong class="grey-text text-darken-3">Select directory</strong>
+            <strong class="">Select directory</strong>
 
         </a>
     </div>
@@ -39,7 +39,7 @@
     <div class="collection sidebar-settings">
         <a href="javascript:void(0);" class="collection-item waves-effect waves-light">
             <i class="left material-icons">settings</i>
-            <strong class="grey-text text-darken-3">Settings</strong>
+            <strong class="">Settings</strong>
         </a>
     </div>
 </div>
