Implement TG-93 #in-progress, TG-82 #done, TG-83 #done, TG-91 #done, TG-94 #in-progress

--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -1,5 +1,5 @@
 
-<section class="row">
+<section class="row" data-bind="listenTo:commands">
 	<!-- ko if: selectedDirectory -->
 	<h4 class="col s12 l6 truncate selected-folder">
 	<a class="bookmark-btn btn btn-floating left waves-effect waves-light"
