--- a/src/js/components/view-manga/view-manga.template.html
+++ b/src/js/components/view-manga/view-manga.template.html
@@ -1,4 +1,4 @@
-<div class="view-manga single-page" data-bind="css:viewOption">
+<div class="view-manga single-page" data-bind="css:viewOption, listenTo:commands">
 	<img class="manga-page" data-bind="src: $component.currentImage, 
 	click:$component.goNextPage, 
 	scrollTopOnClick:scrollTopOnClick,
