--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -6,6 +6,7 @@
 @import "./sidebar.scss";
 @import "./manga-list.scss";
 @import "./topbar.scss";
+@import "./settings-page.scss";
 
 
 .no-flick{transform:translate3d(0,0,0);}
